--- a/app/src/main/res/layout/collaborator_fragment_home.xml
+++ b/app/src/main/res/layout/collaborator_fragment_home.xml
@@ -5,22 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/wallpapaer"
-    tools:context=".MenuPrincipal.Home.FragmentHome">
+    tools:context=".MenuPrincipal.Home.CollaboratorFragmentHome">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="316dp"
-        android:layout_height="140dp"
+        android:id="@+id/linearLayout3"
+        android:layout_width="331dp"
+        android:layout_height="115dp"
         android:backgroundTint="#EAE2E2"
         android:orientation="vertical"
         android:padding="5dp"
         android:translationZ="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.12">
+        app:layout_constraintVertical_bias="0.082">
 
 
         <TextView
@@ -28,37 +27,46 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/sniglet"
             android:text="@string/hi"
-            android:textAlignment="textEnd"
             android:textColor="@color/black"
             android:textSize="48sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/hiUser"
+            android:id="@+id/hiCollaboratorUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/sniglet"
-            android:textAlignment="textEnd"
             android:textColor="@color/black"
             android:textSize="38sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Be the first one to enjoy the experiences advertised."
-            android:textSize="16sp"
-            android:textStyle="bold" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/homeRecyclerView"
-        android:layout_width="393dp"
-        android:layout_height="347dp"
+        android:id="@+id/homeCollaboratorRecyclerView"
+        android:layout_width="329dp"
+        android:layout_height="412dp"
+        android:layout_marginBottom="16dp"
         android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/addYourAddButton"
+        app:layout_constraintVertical_bias="0.748" />
+
+    <Button
+        android:id="@+id/addYourAddButton"
+        android:layout_width="344dp"
+        android:layout_height="54dp"
+        android:backgroundTint="#468C32"
+        android:drawableLeft="@drawable/ic_plus"
+        android:text="Add your advertisement!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.273" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
