--- a/app/src/main/res/layout/collaborator_profile_fragment.xml
+++ b/app/src/main/res/layout/collaborator_profile_fragment.xml
@@ -66,10 +66,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="55dp"
             android:backgroundTint="#4FBD5E"
             android:text="Edit Profile" />
 
+
+        <Button
+            android:id="@+id/subactivebutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="IS SUBSCRIPTION ACTIVE?"
+            android:layout_gravity="center_horizontal"/>
 
 
     </LinearLayout>
